objects/CCMI__Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>CCMI__End__c</fullName>
        <description>The end of the Timesheet is 7 days (including the start date) after the start of the Timesheet</description>
        <formula>CCMI__Start__c + 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The end of the Timesheet is 7 days (including the start date) after the start of the Timesheet</inlineHelpText>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMI__Hash__c</fullName>
        <description>This is a hash of the OwnerId of the Timesheet and the start date, it is used to enforce unique timesheets</description>
        <formula>CASESAFEID(OwnerId) + TEXT(YEAR(CCMI__Start__c)) + &apos;-&apos; + TEXT(MONTH(CCMI__Start__c)) + &apos;-&apos; + TEXT(DAY(CCMI__Start__c))</formula>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Start__c</fullName>
        <description>The date the Timesheet entries can begin</description>
        <inlineHelpText>The first day of the Timesheet</inlineHelpText>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCMI__Worked_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>